--- a/Exercice_1/index.html
+++ b/Exercice_1/index.html
@@ -5,6 +5,7 @@
     <title>Exercice 1</title>
   </head>
   <body>
-      <img src="images/image1.jpg" id="image1"/>
+      <img src="images/image1.jpg" onmouseover="newBorder()" id="image1" />
+<script src="script1.js"></script>
   </body>
 </html>
