--- a/Exercice_3/index.html
+++ b/Exercice_3/index.html
@@ -12,9 +12,11 @@
     </p>
   </div>
   <div>
-  <div class="color green" ></div>
-  <div class="color red" ></div>
-  <div class="color blue" ></div>
+  <div class="color green" onclick="colortextchange1()"></div>
+  <div class="color red" onclick="colortextchange2()"></div>
+  <div class="color blue" onclick="colortextchange3()"></div>
 </div>
+
+<script src="script3.js"></script>
 </body>
 </html>
