--- a/Exercice_4/index.html
+++ b/Exercice_4/index.html
@@ -8,7 +8,9 @@
   <form>
     <label for="password">Votre mot de passe : </label><input type="text" name="password" id="password" />
     <label for="confirmPassword">Confirmez : </label><input type="text" name="confirmPassword" id="confirmPassword" />
-    <button type="button" name="button" >Vérification</button>
+    <button type="button" name="button" onclick="allisok()">Vérification</button>
   </form>
+
+  <script src="script4.js"></script>
 </body>
 </html>
